try fix safari button white background overflow

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -82,6 +82,13 @@
   color: #FD1015;
 }
 
+.new_favorite {
+  background-color:  transparent;
+}
+
+.new_done {
+  background-color:  transparent;
+}
 
 #DefaultImagePreview {
   width:150px;
