--- a/app/assets/stylesheets/pages/_experience_show.scss
+++ b/app/assets/stylesheets/pages/_experience_show.scss
@@ -52,6 +52,7 @@
   border: none;
   background-color: white;
   transition: 0.1s ease-out;
+  width: 30px;
 }
 
 .favorite-button.deactivated button:hover {
@@ -93,6 +94,7 @@
   border: none;
   background-color: white;
   transition: 0.1s ease-out;
+  width: 30px;
 }
 
 .done-button.deactivated button:hover {
